# Diplomacy_RL

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: triad.yaml
notebooks/: 00_review_walkthrough.ipynb  bc_results.ipynb  m4_sweep.ipynb  m5_results.ipynb  map_visualization.ipynb  ppo_training.ipynb
report/: SUMMARY_FOR_REVIEW.md  report.md  slides.md
results/: bop_metrics.json  m4_registry.json  m4_registry.md  tournament.json
scripts/: benchmark_engine.py  eval_bc.py  gen_bc_data.py  make_report_figs.py  run_bop_metrics.py  run_m4_grid.py  run_tournament.py  train_bc.py  train_ppo.py
src/: map_data.py
src/triad/: __init__.py  main.py
src/triad/bots/: __init__.py  base.py  grabber.py  random_legal.py  turtle.py
src/triad/engine/: __init__.py  adjudicator.py  game.py  orders.py  state.py
src/triad/env/: __init__.py  obs.py  triad_env.py  vec.py
src/triad/eval/: __init__.py  metrics.py  ratings.py  tournament.py
src/triad/rl/: __init__.py  bc.py  checkpoint.py  models.py  policy_bot.py  population.py  ppo.py
tests/: test_adjudicator_datc.py  test_bots.py  test_checkpoint.py  test_env.py  test_frame_equivariance.py  test_game.py  test_map.py  test_metrics.py  test_models.py  test_obs.py  test_orders.py  test_ppo.py  test_smoke_scripts.py
weights/: MANIFEST.md  bc.pt  ppo_final.pt  ppo_kl05.pt
